# code_toybox

./: .gitignore  README.md  notes.txt
cpp/: flake.nix
cpp/archive/: flake.nix
cpp/archive/raylib-cpp-cmake-template_SasLuca/: .gitignore  all.sh  build.sh
cpp/archive/raylib-game-template_raysan5/: all.sh  build.sh
cpp/archive/test_raylib/: .gitignore  CMakeLists.txt
cpp/game-premake/: .envrc  flake.nix  run.txt  shell.nix
cpp/game-premake/archive/: all.sh
cpp/game-premake/scripts/: run.sh
cpp/raylib-cpp-cmake-template_SasLuca/: clean.sh  shell.nix
cpp/raylib-game-template_raysan5/: .gitignore  all-nix.sh  clean.sh
cpp/raytracing_one_weekend/: .envrc  .gitignore  CMakeLists.txt  README.md  all-nix.sh  build-nix.sh  build.sh  run.sh  run_all.sh  shell.nix
cpp/raytracing_one_weekend/archive/: all-nix.sh
cpp/raytracing_one_weekend/scripts/: all.sh  build.sh  run.sh
cpp/raytracing_one_weekend/src/: color.h  main.cc  ray.h  vec3.h
cpp/raytracing_one_weekend/src/archive/: simple_camera.cc  single_rgy.cc  single_rgy_class.cc  sphere.cc  sphere_color.cc
cpp/test_raylib/src/: main.c
docker/basic_examples/: Dockerfile
docker/basic_examples/figlet/: Dockerfile
go/: flake.nix
go/cobra_demo_sps/: flake.nix  go.mod  main.go
go/cobra_demo_sps/cmd/: root.go
go/cobra_tea/: .gitignore  flake.nix  go.mod  go.sum  main.go  notes.txt
go/cobra_tea/scripts/: run.sh
go/my_lsp/: .envrc  all.sh  run.sh
go/my_lsp/demo_lsp/: go.mod  main.go
go/toybox/: .gitignore  all.sh
go/toybox/archive/: all.sh
go/toybox/scripts/: helloworld.sh  mytea.sh  tour.sh
nix/: .gitignore  flake.nix
python/django_toy/: .gitignore  flake.nix  manage.py  notes.txt
python/django_toy/mysite/: settings.py
python/django_toy/scripts/: run.sh
python/pixi/: flake.nix
python/pixi/hello-world/: .gitignore  hello_world.py  pixi.toml
rust/toybox/: Cargo.toml  cargo.sh  notes.txt  run.sh
rust/toybox/.devcontainer/: devcontainer.json
rust/toybox/archive/: all.sh
rust/toybox/scripts/: run.sh
rust/toybox/src/: cheatsheet.rs  foobar.rs  guessing_game.rs  impatient.rs  main.rs  rust_by_example.rs
sh/: sshG.sh
sh/lyrics/bakuretsu_thaumazein/: README.md  english.txt  japanese.txt  romaji.txt
sh/lyrics/kaidenwa/: README.md  english.txt  japanese.txt  romaji.txt
web/: flake.nix
web/astro_toybox/ecliptic-equator/: notes.txt  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
web/astro_toybox/learning-threejs_estubmo/: README.md  bun.lockb  flake.nix
web/astro_toybox/shadcn-ui-template/: notes.txt  package-lock.json  tsconfig.json
web/faker/: fake.js  notes.txt  package.json
web/faker/scripts/: run.sh
web/nextjs-p5js-tutorial_alecrem/: all-nix.sh
web/nextjs-p5js-tutorial_alecrem/with-chakra-ui-app/: package-lock.json
web/nextjs/archive/: ships-details.json  ships-min.json
web/nextjs/fictional-spoon/: .eslintignore  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/nextjs/next-shadcn-template-mine/: .gitignore  README.md  next.config.mjs  package.json  (+2 more)
web/vite-sandbox/: README.md  bun.lockb  package.json
web/ynot-twclone/: biome.json  package-lock.json  package.json
(+110 files in other folders)
